implement get worthless not hot topic
