# docs/swagger.json
@@ -88,6 +88,40 @@
                 }
             }
         },
+        "/v1/not-hot-topic/{community}": {
+            "get": {
+                "security": [
+                    {
+                        "Internal": []
+                    }
+                ],
+                "description": "get worthless hot topics",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "NotHotTopic"
+                ],
+                "summary": "Get",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "lowercase community name, like openubmc, cann",
+                        "name": "community",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/app.NotHotTopicsDTO"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/topic-review/{community}": {
             "get": {
                 "security": [
@@ -277,6 +311,17 @@
                 }
             }
         },
+        "app.NotHotTopicsDTO": {
+            "type": "object",
+            "properties": {
+                "topics": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/app.notHotTopicDTO"
+                    }
+                }
+            }
+        },
         "app.OptionalTopic": {
             "type": "object",
             "properties": {
@@ -331,6 +376,20 @@
                 },
                 "status": {
                     "$ref": "#/definitions/app.statusLogDTO"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "app.notHotTopicDTO": {
+            "type": "object",
+            "properties": {
+                "dss": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.DiscussionSourceInfo"
+                    }
                 },
                 "title": {
                     "type": "string"
@@ -410,6 +469,23 @@
                 },
                 "source_type": {
                     "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.DiscussionSourceInfo": {
+            "type": "object",
+            "properties": {
+                "closed": {
+                    "type": "boolean"
+                },
+                "id": {
+                    "type": "integer"
                 },
                 "title": {
                     "type": "string"
